1. dd asc, and descebutton. 2. Gap button has a bug.

--- a/src/index.css
+++ b/src/index.css
@@ -156,6 +156,11 @@ button {
   width: 100px;
   display: inline-block;
 }
-/* li:nth-of-type(1n + 5) {
-  display: none;
-} */
+
+.ascOrder {
+  background-color: green;
+}
+
+.dscOrder {
+  background-color: purple;
+}
